올라가라 좀

--- a/K_league_info/app/src/main/res/layout/fragment_team.xml
+++ b/K_league_info/app/src/main/res/layout/fragment_team.xml
@@ -4,54 +4,4 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.team.TeamFragment">
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
-
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:text="검색창 들어올 공간"
-                android:textAllCaps="false" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <ImageButton
-                    android:id="@+id/gangwonImagebutton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="120dp"
-                    android:layout_weight="1"
-                    android:contentDescription="gangwon"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/gangwon" />
-
-                <ImageButton
-                    android:id="@+id/incheonImagebutton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="120dp"
-                    android:layout_weight="1"
-                    android:contentDescription="incheon"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/incheon" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-            </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    tools:context=".ui.team.TeamFragment"/>
