--- a/K_league_info/app/src/main/res/navigation/mobile_navigation.xml
+++ b/K_league_info/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,7 @@
         android:id="@+id/navigation_home"
         android:name="com.example.k_league_info.ui.score.ScoreFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_score" />
 
     <fragment
         android:id="@+id/navigation_team"
