--- a/K_league_info/app/src/main/res/layout/activity_teamdetail.xml
+++ b/K_league_info/app/src/main/res/layout/activity_teamdetail.xml
@@ -52,6 +52,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="연결용 버튼" />
+
+                <Button
+                    android:id="@+id/scoredetail_test"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="scoredetail_test" />
             </LinearLayout>
         </HorizontalScrollView>
     </LinearLayout>
