--- a/K_league_info/app/src/main/res/layout/activity_post_screen.xml
+++ b/K_league_info/app/src/main/res/layout/activity_post_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".ui.community.postScreen">
+    tools:context=".ui.community.PostScreen">
 
     <ScrollView
         android:id="@+id/scroll"
@@ -67,7 +67,7 @@
             android:id="@+id/comment"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="90"
+            android:layout_weight="99"
             android:ems="10"
             android:hint="댓글을 입력하세요."
             android:inputType="text" />
@@ -76,7 +76,7 @@
             android:id="@+id/ok"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="10"
+            android:layout_weight="1"
             android:text="등록" />
     </LinearLayout>
 
