--- a/K_league_info/app/src/main/res/layout/item_communityboard.xml
+++ b/K_league_info/app/src/main/res/layout/item_communityboard.xml
@@ -27,6 +27,8 @@
                 android:layout_weight="80"
                 android:gravity="center_vertical"
                 android:text="제목"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -44,6 +46,8 @@
                 android:layout_height="match_parent"
                 android:layout_weight="80"
                 android:gravity="center_vertical"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:text="내용" />
 
             <TextView
