--- a/K_league_info/app/src/main/res/layout/item_teamdetail.xml
+++ b/K_league_info/app/src/main/res/layout/item_teamdetail.xml
@@ -6,22 +6,23 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/thumbnail"
+        android:id="@+id/player_thumbnail"
         android:layout_width="147dp"
         android:layout_height="150dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_help" />
+        app:srcCompat="@android:drawable/ic_menu_help"
+        tools:srcCompat="@drawable/gk_lee" />
 
     <TextView
-        android:id="@+id/name"
+        android:id="@+id/player_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/thumbnail"
+        app:layout_constraintTop_toBottomOf="@+id/player_thumbnail"
         app:layout_constraintVertical_bias="0.118"
         tools:layout_editor_absoluteX="176dp"
         tools:ignore="MissingConstraints" />
