--- a/K_league_info/app/src/main/res/layout/activity_teamdetail.xml
+++ b/K_league_info/app/src/main/res/layout/activity_teamdetail.xml
@@ -34,27 +34,19 @@
         app:layout_constraintTop_toBottomOf="@+id/teamdescLinearlayout"
         android:layout_height="wrap_content">
 
-        <HorizontalScrollView
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/fw_recyclerview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+        </androidx.recyclerview.widget.RecyclerView>
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-                <Button
-                    android:id="@+id/tmp_buttton"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="연결용 버튼" />
-
-            </LinearLayout>
-        </HorizontalScrollView>
+        <Button
+            android:id="@+id/tmp_buttton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="연결용 버튼" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
