no finished : glide & horizontal recyclerview at teamdetail

--- a/K_league_info/app/src/main/res/layout/item_teamdetail.xml
+++ b/K_league_info/app/src/main/res/layout/item_teamdetail.xml
@@ -13,8 +13,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:src="@android:drawable/ic_menu_help"
-        tools:src="@drawable/gk_lee" />
+        android:src="@drawable/gk_lee" />
 
     <TextView
         android:id="@+id/player_name"
