--- a/K_league_info/app/src/main/res/layout/activity_teamdetail.xml
+++ b/K_league_info/app/src/main/res/layout/activity_teamdetail.xml
@@ -30,9 +30,9 @@
     <LinearLayout
         android:id="@+id/teamstaffLinearlayout"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/teamdescLinearlayout"
-        android:layout_height="wrap_content">
+        app:layout_constraintTop_toBottomOf="@+id/teamdescLinearlayout">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/fw_recyclerview"
