--- a/K_league_info/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/K_league_info/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,18 +2,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:id="@+id/navigation_score"
+        android:icon="@drawable/score_icon"
+        android:title="@string/title_score" />
 
     <item
         android:id="@+id/navigation_team"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:icon="@drawable/team_icon"
+        android:title="@string/title_team" />
 
     <item
         android:id="@+id/navigation_community"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:icon="@drawable/community_icon"
+        android:title="@string/title_community" />
 
 </menu>
