어플 색상 변경 및 타이틀 바 제거

--- a/K_league_info/app/src/main/res/values/styles.xml
+++ b/K_league_info/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
 
         // fullscreen은 되는데 왜 title은 안사라질까....
         <item name="android:windowNoTitle">true</item>
