--- a/K_league_info/app/src/main/res/values/styles.xml
+++ b/K_league_info/app/src/main/res/values/styles.xml
@@ -2,9 +2,8 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
 
-        // fullscreen은 되는데 왜 title은 안사라질까....
         <item name="android:windowNoTitle">true</item>
-        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowFullscreen">false</item>
 
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
