--- a/K_league_info/app/src/main/res/layout/activity_scoredetail.xml
+++ b/K_league_info/app/src/main/res/layout/activity_scoredetail.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ScoredetailActivity">
-<!--    tools는 xml의 layout preview에서 어떻게 나오는지 확인할수 있고 실제 앱에서는 표시되지 않음.-->
+    <!--    tools는 xml의 layout preview에서 어떻게 나오는지 확인할수 있고 실제 앱에서는 표시되지 않음.-->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-<!--        이미지 뷰의 drawable을 설정할수 있어야 스코어와 이미지를 변경할수있다. 리사이클을 여기도 쓸까?-->
+        <!--        이미지 뷰의 drawable을 설정할수 있어야 스코어와 이미지를 변경할수있다. 리사이클을 여기도 쓸까?-->
 
         <ImageView
             android:id="@+id/team_logo_1"
@@ -25,18 +25,18 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            tools:text="5"
             android:gravity="center"
             android:textAlignment="center"
-            android:textSize="30sp" />
+            android:textSize="30sp"
+            tools:text="5" />
 
         <TextView
             android:id="@+id/VS"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="VS"
             android:gravity="center"
+            android:text="VS"
             android:textAlignment="center"
             android:textSize="18sp" />
 
@@ -45,10 +45,10 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            tools:text="5"
             android:gravity="center"
             android:textAlignment="center"
-            android:textSize="30sp" />
+            android:textSize="30sp"
+            tools:text="5" />
 
         <ImageView
             android:id="@+id/team_logo_2"
@@ -94,6 +94,6 @@
         android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 </LinearLayout>
