--- a/K_league_info/app/src/main/res/layout/fragment_community.xml
+++ b/K_league_info/app/src/main/res/layout/fragment_community.xml
@@ -15,13 +15,13 @@
         android:layout_marginBottom="40dp"
         android:clickable="true"
 
-        app:backgroundTint="@color/colorPrimary"
-
-        app:tint="@null"
         android:src="@android:drawable/ic_menu_edit"
 
+        app:backgroundTint="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:tint="@null" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/refreshLayout"
