--- a/K_league_info/app/src/main/res/layout/fragment_scoredetail_recode.xml
+++ b/K_league_info/app/src/main/res/layout/fragment_scoredetail_recode.xml
@@ -10,11 +10,11 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="TextView"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="TextView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
