--- a/K_league_info/app/src/main/res/layout/fragment_team.xml
+++ b/K_league_info/app/src/main/res/layout/fragment_team.xml
@@ -43,7 +43,7 @@
                     android:layout_weight="1"
                     android:background="@color/colorTeamBackground"
                     android:scaleType="fitCenter"
-                    android:src="@drawable/jeonbukhyundai" />
+                    android:src="@drawable/jeonbuk" />
             </LinearLayout>
 
             <!-- 2번 row -->
