--- a/K_league_info/app/src/main/res/layout/item_score.xml
+++ b/K_league_info/app/src/main/res/layout/item_score.xml
@@ -22,7 +22,7 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_weight="1"
-                android:src="@drawable/gyeongnam" />
+                android:src="@drawable/daegu" />
 
             <TextView
                 android:layout_width="100dp"
