--- a/K_league_info/app/src/main/res/layout/activity_teamdetail.xml
+++ b/K_league_info/app/src/main/res/layout/activity_teamdetail.xml
@@ -9,6 +9,7 @@
         android:id="@+id/teamdescLinearlayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="5dp"
         tools:ignore="MissingConstraints">
 
         <ImageView
@@ -16,6 +17,7 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:scaleType="fitCenter"
+            android:padding="5dp"
             app:srcCompat="@drawable/gangwon" />
 
         <TextView
@@ -23,14 +25,17 @@
             android:layout_width="wrap_content"
             android:layout_height="151dp"
             android:layout_weight="1"
+            android:padding="5dp"
             android:text="팀 설명 어쩌고 저쩌고" />
     </LinearLayout>
 
     <ScrollView
         android:id="@+id/scrollTeamdetail"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/teamdescLinearlayout">
+        android:layout_height="0dp"
+        android:padding="5dp"
+        app:layout_constraintTop_toBottomOf="@+id/teamdescLinearlayout"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
             android:id="@+id/linearTeamdetail"
@@ -43,6 +48,7 @@
                 android:id="@+id/staff_teamdetail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="5dp"
                 android:text="감독 및 코치" />
 
             <androidx.recyclerview.widget.RecyclerView
@@ -55,6 +61,7 @@
                 android:id="@+id/fw_teamdetail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="5dp"
                 android:text="공격수" />
 
             <androidx.recyclerview.widget.RecyclerView
@@ -67,6 +74,7 @@
                 android:id="@+id/mf_teamdetail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="5dp"
                 android:text="미드필더" />
 
             <androidx.recyclerview.widget.RecyclerView
@@ -79,6 +87,7 @@
                 android:id="@+id/df_teamdetail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="5dp"
                 android:text="수비수" />
 
             <androidx.recyclerview.widget.RecyclerView
@@ -91,6 +100,7 @@
                 android:id="@+id/gk_teamdetail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="5dp"
                 android:text="골키퍼" />
 
             <androidx.recyclerview.widget.RecyclerView
