--- a/K_league_info/app/src/main/res/layout/item_score.xml
+++ b/K_league_info/app/src/main/res/layout/item_score.xml
@@ -5,44 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-    <LinearLayout
-        android:gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
 
-        <Button
-            android:layout_marginRight="30dp"
-            android:id="@+id/previous"
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            android:text="&lt;"
-            android:textSize="10dp"
-
-            />
-
-        <Button
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:id="@+id/calender"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:text="8/30"
-
-
-            />
-
-        <Button
-            android:layout_marginLeft="30dp"
-            android:id="@+id/next"
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            android:text="&gt;"
-
-
-            />
-
-    </LinearLayout>
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/score_card"
@@ -61,24 +24,41 @@
             android:orientation="horizontal">
             <ImageView
                 android:id="@+id/homemark"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="110dp"
+                android:layout_height="110dp"
                 android:layout_weight="1"
                 android:src="@drawable/daegu" />
-
             <TextView
+                android:textColor="#000000"
+                android:id="@+id/homescore"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_weight="1"
+                android:gravity="center|bottom"
+                android:text="2"
+                android:textSize="50dp" />
+            <TextView
+                android:textColor="#000000"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_weight="1"
                 android:gravity="center|bottom"
                 android:text="VS"
                 android:textSize="50dp" />
-
+            <TextView
+                android:textColor="#000000"
+                android:id="@+id/awayscore"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_weight="1"
+                android:gravity="center|bottom"
+                android:text="3"
+                android:textSize="50dp" />
 
             <ImageView
                 android:id="@+id/awaymark"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="110dp"
+                android:layout_height="110dp"
                 android:layout_weight="1"
                 android:src="@drawable/seongnam" />
         </LinearLayout>
@@ -95,8 +75,8 @@
                     android:text="1팀"
                     android:textColor="#000000"
                     android:gravity="left"
-                    android:layout_marginLeft="35dp"
-                    android:textSize="30dp" />
+                    android:layout_marginLeft="25dp"
+                    android:textSize="20dp" />
                 <TextView
                     android:id="@+id/awayname"
                     android:layout_width="50dp"
@@ -105,8 +85,8 @@
                     android:textColor="#000000"
                     android:text="2팀"
                     android:gravity="right"
-                    android:layout_marginRight="30dp"
-                    android:textSize="30dp" />
+                    android:layout_marginRight="25dp"
+                    android:textSize="20dp" />
         </LinearLayout>
         </LinearLayout>
 
