--- a/K_league_info/app/src/main/res/drawable/layout_community.xml
+++ b/K_league_info/app/src/main/res/drawable/layout_community.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" >
-    <corners android:radius="100dp" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
+    <corners android:radius="20dp" />
     <solid android:color="@color/colorPrimary" />
     <padding
         android:left="0dp"
